k8s/api-layer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-layer
  labels:
    app: api-layer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-layer
  template:
    metadata:
      labels:
        app: api-layer
    spec:
      containers:
        - name: api-layer
          image: mysql-newrelic-k6-api-layer:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
