k8s/nri-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nri-mysql
  labels:
    app: nri-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nri-mysql
  template:
    metadata:
      labels:
        app: nri-mysql
    spec:
      containers:
        - name: nri-mysql
          image: nri-mysql:latest
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
