k8s/load-generator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-generator-service
  labels:
    app: load-generator
spec:
  selector:
    app: load-generator
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
